[build-system]
    build-backend = "setuptools.build_meta"
    requires = ["setuptools", "setuptools_scm[toml]", "wheel"]

[project]
    name = "qrzlib"
    readme = "README.md"
    description = "API to access data from qrz.com."
    license = {file = "LICENSE"}
    dynamic = ["version"]
    requires-python = ">=3.10"
    authors = [
        { name = "Fred C. (W6BSD)" },
    ]
    classifiers = [
        "Development Status :: 4 - Beta",
        "Intended Audience :: Developers",
        "Intended Audience :: Telecommunications Industry",
        "License :: OSI Approved :: BSD License",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python",
        "Topic :: Communications :: Ham Radio",
    ]

[project.scripts]
  qrzlib = "qrzlib:main"

[tool.setuptools_scm]
    write_to = "qrzlib/_version.py"

[project.urls]
    Source = "https://github.com/0x9900/qrzlib"
    Tracker = "https://github.com/0x9900/qrzlib/issues"
